fix(rgaa): color contrast

--- a/packages/app/src/components/InputYear/style.scss
+++ b/packages/app/src/components/InputYear/style.scss
@@ -3,16 +3,16 @@
   width: 100%;
   padding-left: 14px;
 
-  border: solid 1px #D4D4D4;
+  border: solid 1px #d4d4d4;
   border-radius: 5px;
   &:focus,
   &:active,
   &:focus-visible,
   &:focus-within {
     outline: none;
-    border: solid 1px #007AD9 !important;
+    border: solid 1px #0072ca !important;
   }
   .has-error & {
-    border: solid 1px #FF6966 !important;
+    border: solid 1px #ff6966 !important;
   }
 }
